Added ssh auth fix and zsh variable updates - The SSH rc file overwrote the past connection which was not necessary   and cause some workflow problems. For instance, if I was connected to   a server, created a new terminal and temporarily connected, then the   ssh_auth_sock was broken after I disconnected. But the long running   session was still needing it. - I should not have been copying the entire zshrc file as that may break   things later. - Made the ssh rc file check to see if the current ssh_auth_sock socket   is valid. If it is, it will not create a new symlink. So it will only   update if the old socket is closed. - I now just add/update the variables I want in the zshrc file using the   lineinfile module - Connecting to a server with a new connection won't break old sessions - zshrc won't break if they update their file

--- a/roles/zsh/tasks/main.yml
+++ b/roles/zsh/tasks/main.yml
@@ -11,7 +11,32 @@
     repo: https://github.com/zsh-users/zsh-autosuggestions
     dest: ~/.oh-my-zsh/custom/plugins/zsh-autosuggestions
 
-- name: "Upload zshrc"
-  copy:
-    src: files/zshrc
-    dest: ~/.zshrc
+- name: "Change SSH_AUTH_SOCK"
+  lineinfile:
+    path: ~/.zshrc
+    regexp: '^export SSH_AUTH_SOCK'
+    line: "export SSH_AUTH_SOCK=~/.ssh/ssh_auth_sock"
+
+- name: "Change ZSH_THEME"
+  lineinfile:
+    path: ~/.zshrc
+    regexp: '^ZSH_THEME='
+    line: ZSH_THEME="agnoster"
+    
+- name: "Add ipa alias"
+  lineinfile:
+    path: ~/.zshrc
+    regexp: '^alias ipa='
+    line: alias ipa="ip --brief --color addr"
+
+- name: "Change EDITOR"
+  lineinfile:
+    path: ~/.zshrc
+    regexp: '^export EDITOR'
+    line: "export EDITOR=vim"
+
+- name: "Change NMON"
+  lineinfile:
+    path: ~/.zshrc
+    regexp: '^export NMON'
+    line: "export NMON=cmnd"
